// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading attach demo works fine 1`] = `
<div
  class="loading-attach-demo"
>
  <div
    class="loading-attach-demo__title"
    id="alice"
  >
     Hello, I'm Alice. 
  </div>
  <div
    class="loading-attach-demo__title"
    id="bob"
  >
     Hi, I'm Bob. 
  </div>
  <div
    class="t-loading t-size-m t-loading-mask t-loading-lock t-loading__wrapper v-transfer-dom"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    <!---->
  </div>
</div>
`;

exports[`Loading base demo works fine 1`] = `
<div
  class="t-loading-demo"
>
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 14 14"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="1"
        y="1"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
    <!---->
  </div>
  <!-- 自定义加载图标 -->
  <!-- &lt;t-loading&gt;
      &lt;template #indicator&gt;
        &lt;img src="https://tdesign.gtimg.com/icon/loading.png" class="t-icon-loading" /&gt;
      &lt;/template&gt;
    &lt;/t-loading&gt; -->
</div>
`;

exports[`Loading delay demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div>
    <!--v-if-->
    <div
      class="switch-demo"
    >
      <!--v-if-->
    </div>
  </div>
  <div
    class="wrap"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="wrap"
      />
      
      <!---->
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         快速重新加载数据（无loading） 
        
      </span>
    </button>
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         慢速重新加载数据 
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Loading fullscreen demo works fine 1`] = `
<div>
  <div
    class="t-loading t-size-m t-loading-fullscreen t-loading-lock v-transfer-dom"
  >
    <!---->
    <!---->
  </div>
  <div
    class="switch-demo"
  >
     全局加载开关（开启加载1秒后自动归位）： 
    <div
      class="t-switch t-size-m"
      disabled="false"
      modelvalue="false"
    >
      <span
        class="t-switch__handle"
      >
        <!---->
      </span>
      <div
        class="t-switch__content t-size-m"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading iconText demo works fine 1`] = `
<div
  class="t-loading t-size-s t-loading-lock v-transfer-dom"
>
  <svg
    class="t-loading__gradient t-icon-loading"
    height="1em"
    size="small"
    version="1.1"
    viewBox="0 0 14 14"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <foreignobject
      height="12"
      width="12"
      x="1"
      y="1"
    >
      <div
        class="t-loading__gradient-conic"
      />
    </foreignobject>
  </svg>
  <div
    class="t-loading-text"
  >
    加载中...
  </div>
</div>
`;

exports[`Loading service demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="loading-service-demo"
    id="loading-service-demo"
  >
     我是service的容器 
  </div>
  <p>
    this.$loading(true)
  </p>
  <p>
    this.$loading({ attach: '#loading-service-demo', showOverlay: true })
  </p>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         服务方式加载（全屏） 
        
      </span>
    </button>
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         服务方式加载（局部） 
        
      </span>
    </button>
  </div>
  <p>
    LoadingPlugin(true)
  </p>
  <p>
    LoadingPlugin({ attach: '#loading-service-demo', showOverlay: true })
  </p>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         函数方式加载（全屏） 
        
      </span>
    </button>
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary t-loading__btn"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         函数方式加载（局部） 
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Loading size demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-loading t-size-s t-loading-lock v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="small"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <div
        class="t-loading-text"
      >
        加载中（小）...
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-loading t-size-m t-loading-lock v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="medium"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <div
        class="t-loading-text"
      >
        加载中（中）...
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-loading t-size-l t-loading-lock v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="large"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <div
        class="t-loading-text"
      >
        加载中（大）...
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading text demo works fine 1`] = `
<div
  class="t-loading-demo"
>
  <!-- 使用 props 实现自定义 -->
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <!---->
    <div
      class="t-loading-text"
    >
      静态文字加载中...
    </div>
  </div>
  <!-- 使用 props 实现自定义 -->
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <!---->
    <div
      class="t-loading-text"
    >
      <span>
        变量文字加载中...
      </span>
    </div>
  </div>
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <!---->
    <div
      class="t-loading-text"
    >
      
       插槽文字加载中... 
      
    </div>
  </div>
</div>
`;

exports[`Loading wrap demo works fine 1`] = `
<div
  class="loading-wrap-demo"
>
  <div
    class="t-loading-parent__relative"
  >
    
    <div>
      this is loading component
    </div>
    <div>
      this is loading component
    </div>
    <div>
      this is loading component
    </div>
    <div>
      this is loading component
    </div>
    <div>
      this is loading component
    </div>
    
    <div
      class="t-loading t-loading__wrapper t-loading-mask t-size-s"
    >
      <div
        class="t-loading-mask-text"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
        <!---->
      </div>
    </div>
  </div>
  <br />
  <div>
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         加载中 
        
      </span>
    </button>
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         加载完成 
        
      </span>
    </button>
  </div>
</div>
`;
